syntax = "proto3";

package frostdb.wal.v1alpha1;

import "frostdb/table/v1alpha1/config.proto";

// Record describes a single entry into the WAL.
message Record {
  reserved 2; // Previously used for transaction metadata.
  // Data of the record. This is intentionally nested so the only thing in
  // the entry can be a protobuf `oneof` and have forward compatilibity.
  Entry entry = 1;
}

// The data of a WAL Record. This is intentionally separate to allow using the
// `oneof` feature in a forward-compatible way.
message Entry {
  // The write-type entry.
  message Write {
    // Table name of the write.
    string table_name = 1;
    // Data is the data of the write.
    bytes data = 2;
    // Arrow indicates that data is stored in arrow record format.
    bool arrow = 3;
  }

  // The new-table-block entry.
  message NewTableBlock {
    reserved 3, 4; // Previoulsy for schema versions that are now contained in the table config.
    // Table name of the new-table-block.
    string table_name = 1;
    // Block ID of the new-table-block.
    bytes block_id = 2;
    // Config of the new-table-block.
    frostdb.table.v1alpha1.TableConfig config = 5;
  }

  // The table-block persisted entry.
  message TableBlockPersisted {
    // Table name of the new-table-block.
    string table_name = 1;
    // Block ID of the new-table-block.
    bytes block_id = 2;
    // NextTx is the next non-persisted transaction at the time of block
    // persistence. If the block has been persisted, any txn id < next_tx is
    // considered persisted or not relevant to this table (i.e. it can be a
    // non-persisted txn from another table).
    uint64 next_tx = 3;
  }

  // The snapshot entry.
  message Snapshot {
    // The tx the snapshot was taken at.
    uint64 tx = 1;
  }

  // The new-table entry.
  oneof entry_type {
    // Write is set if the entry describes a write.
    Write write = 1;
    // NewTableBlock is set if the entry describes a new-table-block.
    NewTableBlock new_table_block = 2;
    // TableBlockPersisted is set if the entry describes a table-block-persisted.
    TableBlockPersisted table_block_persisted = 3;
    // Snapshot is set if the entry describes a snapshot.
    Snapshot snapshot = 4;
  }
}
